--- a/src/pages/Payment/Payment.module.css
+++ b/src/pages/Payment/Payment.module.css
@@ -19,6 +19,7 @@
 }
 
 /* Form Styles */
+
 .form__container {
   padding: 40px 60px;
   max-width: 700px;
@@ -48,6 +49,14 @@
   display: flex;
   flex-direction: column;
   flex: 1;
+}
+
+.supported_cards {
+  display: flex;
+  gap: 11.5%;
+  border-bottom: 2px solid var(--border-color);
+  padding-bottom: 12px;
+  margin-bottom: 15px;
 }
 
 .form__label {
@@ -168,6 +177,10 @@
     gap: 24px;
   }
 
+  .supported_cards {
+    gap: 9%;
+  }
+
   .form__title {
     font-size: 24px;
   }
@@ -175,11 +188,11 @@
     width: 100%;
   }
 
-  .content__side{
-    padding: 0  !important;
+  .content__side {
+    padding: 0 !important;
   }
 
-  .form__title{
+  .form__title {
     font-size: 21px;
   }
 }
