--- a/src/pages/Main/Main.module.css
+++ b/src/pages/Main/Main.module.css
@@ -1,184 +1,268 @@
-.route {
-  margin-top: 8px;
-  padding: 8px 0;
-  font-size: 12px;
-  display: flex;
+.header {
+  width: 100%;
+  height: 400px;
+  background: linear-gradient(
+      180deg,
+      rgba(4, 9, 26, 0) 0%,
+      rgba(4, 9, 26, 0) 15%,
+      rgba(4, 9, 26, 0.54) 35%,
+      rgba(4, 9, 26, 0.6) 100%
+    ),
+    url("/assets/main/header/download.avif") no-repeat center/cover;
+  z-index: 0;
 }
 
-.route li {
-  list-style: none;
-}
-
-.route li:last-child {
-  color: var(--secondary-text-color);
-}
-
-.route li::after {
-  content: ">";
-
-  margin: 0 4px;
-}
-
-.route li:last-child::after {
-  content: "";
-}
-
-.info {
-  margin: 24px 0;
-  position: relative;
-}
-
-.info__review {
-  margin: 25px 0;
-  font-size: 14px;
-  display: flex;
-}
-
-.rating {
-  margin-right: 4px;
-}
-
-.rating__value {
-  margin-right: 8px;
-  font-weight: 500;
-}
-
-.reviews__amount {
-  text-transform: uppercase;
-  font-weight: 500;
-  color: var(--review-amount-text-color);
-}
-
-.bestseller {
-  color: var(--button-bg-color);
-  text-transform: uppercase;
-  font-weight: 500;
-  margin: 4px 0;
-  letter-spacing: 1px;
+.header .content {
+  padding-top: 100px;
+  z-index: 2;
 }
 
 .title {
-  font-size: 32px;
-}
-
-.hours {
-  margin-top: 20px;
-}
-
-.row {
-  font-weight: 500;
-  display: flex;
-  gap: calc(0.25rem * 4);
-}
-
-.row span {
-  display: flex;
-  align-items: center;
-}
-
-.row span svg {
-  margin-top: 4px;
-}
-
-.today {
-  display: flex;
-  gap: 3px;
-}
-
-.today p {
-  font-size: 14px;
-  color: var(--open-color);
-}
-
-.today__time {
-  font-weight: normal;
-  font-size: 14px;
-  color: var(--secondary-text-color);
-}
-
-.column {
-  display: flex;
-  flex-direction: column;
-  gap: 6px;
-}
-
-.dropdowns {
-  margin-top: 50px;
-}
-
-.included__content span {
-  color: var(--primary-text-color);
-  font-size: 16px;
-  font-weight: 500;
-}
-
-.included__content div {
-  margin-top: 12px;
-  display: flex;
-  gap: 16px;
-  align-items: center;
-}
-
-.address .row {
-  color: var(--primary-text-color);
-  margin-top: 12px;
-  display: flex;
-  align-items: start;
-}
-
-.address .column {
-  display: flex;
-  flex-direction: column;
-  gap: 0;
-}
-
-.address .column span:last-child {
-  color: #00818a;
-}
-
-.policy {
-  list-style-type: disc;
-  padding-left: 20px;
-}
-
-.policy li {
-  padding-left: 20px;
+  font-size: 48px;
+  color: white;
   margin-bottom: 4px;
 }
 
-.additional {
-  margin-top: 12px;
+.inputWrapper {
+  position: relative;
+  width: 720px;
 }
 
-.additional .column span:last-child {
-  color: var(--secondary-text-color);
-  font-weight: normal;
-  font-size: 14px;
-}
-
-.fastTrack{
-  padding: 20px 0;
+.search {
+  width: 100%;
+  padding: 12px 16px 12px 60px; /* слева отступ под иконку */
+  border-radius: 50px;
+  border: none;
+  height: 50px;
   display: flex;
-  gap: 16px;
   align-items: center;
+  font-size: 16px;
 }
 
-.fastTrack p{
+.search:focus {
+  outline: none;
+}
+
+.search__ico {
+  position: absolute;
+  transform: translateY(-50%);
+  top: 50%;
+  margin-left: 20px;
+  height: 24px;
+  width: 24px;
+}
+
+.end__row {
+  margin-top: 25px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.end {
+  color: white;
+  font-size: 14px;
   font-weight: 500;
+}
+
+.info {
+  display: flex;
+  gap: 24px;
+  margin: 40px 0;
+}
+
+.info__block {
+  width: 33.333%;
+  height: 100px;
+  padding: 16px;
+  background-color: #f2f4f7;
+  border-radius: 0.75rem;
+  display: flex;
+  align-items: start;
+  gap: 15px;
+}
+
+.info__ico img {
+  width: 40px;
+  height: 40px;
+}
+
+.info__content {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
   color: var(--primary-text-color);
 }
 
-@media (max-width: 768px) {
-  .title {
-    font-size: 20px;
-    margin-bottom: 5px;
-  }
+.info__title {
+  font-weight: 700;
+  font-size: 16px;
+}
 
-  .description{
-    font-size: 13px;
-  }
+.info__subtitle {
+  font-size: 14px;
+  line-height: 1.25rem;
+}
 
-  .route {
-    display: none;
+.partners__title {
+  margin-bottom: 5px;
+}
+
+.partners__description {
+  line-height: 1.5rem;
+  margin-bottom: 16px;
+}
+
+.partners__row {
+  margin-top: 20px;
+  position: relative;
+  width: 100%;
+  overflow: hidden;
+
+  /* градиент по бокам */
+  -webkit-mask-image: linear-gradient(
+    to right,
+    transparent,
+    white 10%,
+    white 90%,
+    transparent
+  );
+  -webkit-mask-repeat: no-repeat;
+  -webkit-mask-size: 100% 100%;
+  mask-image: linear-gradient(
+    to right,
+    transparent,
+    white 10%,
+    white 90%,
+    transparent
+  );
+  mask-repeat: no-repeat;
+  mask-size: 100% 100%;
+
+  background: #fff; /* фон */
+}
+
+.marquee {
+  width: 100%;
+  overflow: hidden;
+}
+
+.track {
+  display: flex;
+  width: max-content;
+  animation: scroll 50s linear infinite;
+}
+
+.track img {
+  width: 125px;
+  height: 100px;
+  margin: 0 20px;
+  object-fit: contain;
+}
+
+.track:hover {
+  animation-play-state: paused;
+}
+
+@keyframes scroll {
+  from {
+    transform: translateX(0);
   }
+  to {
+    transform: translateX(-50%);
+  }
+}
+
+.help__center {
+  width: 100%;
+  height: 160px;
+  background-color: #00a3a8;
+  border-radius: 0.75rem;
+  padding: 20px 32px;
+  display: flex;
+  align-items: center;
+  gap: 100px;
+  color: white;
+  margin: 30px 0;
+}
+
+.help__center:hover {
+  background-color: #008a8f;
+}
+
+.help__content {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
+.help__title {
+  font-size: 24px;
+}
+
+.help__description {
+  font-size: 16px;
+}
+
+.download__wrapper {
+  background-color: #18babd;
+  width: 100%;
+}
+
+.download {
+  display: flex;
+  height: 400px;
+}
+
+.download__content {
+  padding-top: 103px;
+  width: 70%;
+  color: white;
+}
+
+.download__title {
+  margin-bottom: 4px;
+}
+
+.download__description {
+  line-height: 1.5rem;
+  margin-bottom: 16px;
+}
+
+.download__buttons {
+  display: flex;
+  gap: 15px;
+  margin-bottom: 16px;
+}
+
+.download__buttons img {
+  width: 135px;
+  height: 40px;
+}
+
+.download__img {
+  width: 30%;
+  display: flex;
+  position: relative;
+}
+
+.phone__1 img {
+  width: 241px;
+  height: 312px;
+  object-fit: cover;
+  border-radius: 24px 24px 0 0;
+  position: absolute;
+  bottom: 0;
+  z-index: 3;
+}
+
+.phone__2 img {
+  width: 240px;
+  height: 381px;
+  object-fit: cover;
+  border-radius: 24px 24px 0 0;
+  position: absolute;
+  bottom: 0;
+  z-index: 2;
+  transform: translateX(50%);
 }
