--- a/src/components/Reviews/Reviews.module.css
+++ b/src/components/Reviews/Reviews.module.css
@@ -61,7 +61,7 @@
 
 .progressFill {
   height: 100%;
-  background: #00806f;
+  background: gold;
   border-radius: 5px 0 0 5px;
   transition: width 0.4s ease;
 }
