--- a/src/components/EventsList/EventsList.module.css
+++ b/src/components/EventsList/EventsList.module.css
@@ -86,4 +86,18 @@
   font-size: 16px;
   font-weight: 700;
   color: #00a3a8;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.no_discount {
+  color: black;
+  text-decoration: line-through;
+  font-weight: 500;
+}
+
+.price {
+  color: red;
+  font-weight: 500;
 }
