--- a/src/pages/Event/EventPage.module.css
+++ b/src/pages/Event/EventPage.module.css
@@ -5,7 +5,7 @@
   display: flex;
 }
 
-.description{
+.description {
   width: 67%;
 }
 
@@ -160,16 +160,39 @@
   font-size: 14px;
 }
 
-.fastTrack{
+.fastTrack {
   padding: 20px 0;
   display: flex;
   gap: 16px;
   align-items: center;
 }
 
-.fastTrack p{
+.fastTrack p {
   font-weight: 500;
   color: var(--primary-text-color);
+}
+
+.description__full {
+  margin-top: 20px;
+  width: 792px;
+}
+
+.description__full__title {
+  font-weight: 800;
+  font-size: 32px;
+  margin-bottom: 10px;
+}
+
+.desc {
+  font-size: 16px;
+  line-height: 1.5rem;
+}
+
+.map__title {
+  font-weight: 800;
+  font-size: 32px;
+  margin-top: 40px;
+  margin-bottom: 20px;
 }
 
 @media (max-width: 768px) {
@@ -178,11 +201,21 @@
     margin-bottom: 5px;
   }
 
-  .description{
+  .description {
     font-size: 13px;
   }
 
   .route {
     display: none;
+  }
+
+  .description__full {
+    margin-top: 20px;
+    width: 100%;
+  }
+
+  .map {
+    width: 100%;
+    height: 255px;
   }
 }
