--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -7,6 +7,7 @@ header {
   -webkit-box-shadow: 0px -6px 4px 8px rgba(34, 51, 102, 0.15);
   -moz-box-shadow: 0px -6px 4px 8px rgba(34, 51, 102, 0.15);
   overflow: hidden;
+  min-height: 70px;
 }
 
 .wrapper {
@@ -16,6 +17,7 @@ header {
   align-items: center;
   padding: 10px 0;
   position: relative;
+  min-height: 70px;
 }
 
 .main {
@@ -64,7 +66,7 @@ header {
     display: none;
   }
 
-  .logo{
+  .logo {
     width: 62px;
     height: 32px;
   }
@@ -78,7 +80,6 @@ header {
 
   .wrapper {
     padding: 5px 0;
-  
   }
 
   .main {
